No memory on docker build again :/